--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         <h2 class="cost-heading">Product Cost & Revenue</h2>
         <p class="cost-paragraph">
           Product Cost & Revenue Projections <br />
+          <a href="https://docs.google.com/spreadsheets/d/1h42P1bOeJECtsagnKzg7VEbN-ADHMjg08Pqwa_rZweE/edit?usp=sharing"
+            class ="product_cost_link">Click here to view the spreadsheet</a
+          > <br />
           We have modeled our first drop based on two scenarios: 100 units and
           300 units.<br />
           Product | Units | Cost/Unit | Sale Price | Total Cost | Total Revenue
